@@ -365,6 +365,10 @@ Release 2.7.0 - 2015-04-20
 
   BUG FIXES
 
+    YARN-3554. Default value for maximum nodemanager connect wait time is too high. Contributed by Naganarasimha G R
+
+    YARN-4414. Nodemanager connection errors are retried at multiple levels. Contributed by Chang Li
+
     YARN-3840 Resource Manager web ui issue when sorting application by id (with application having id > 9999) (Bug 21865)
 
     YARN-3544. Got back AM logs link on the RM web UI for a completed app.
@@ -1082,7 +1086,6 @@ Release 2.6.0 - 2014-11-18
     YARN-2406. Move RM recovery related proto to
     yarn_server_resourcemanager_recovery.proto. (Tsuyoshi Ozawa via jianhe)
 
-<<<<<<< HEAD
     YARN-1506. Changed RMNode/SchedulerNode to update resource with event
     notification. (Junping Du via jianhe)
 
